schedule scrollbars and day outline fix

--- a/themes/nabshow-2022/app/scss/modules/_hybrid.scss
+++ b/themes/nabshow-2022/app/scss/modules/_hybrid.scss
@@ -130,6 +130,7 @@
 				transition: border-color .25s ease;
 				&:hover, &:focus, &:active {
 					color: $color__purple-light;
+					outline: none;
 				}
 				&._shown {
 					border-bottom-color: $c__purple-light;
@@ -144,7 +145,7 @@
 				padding: 0;
 				margin: 0;
 				height: calc(100% - #{rem(40)});
-				overflow: scroll;
+				overflow: auto;
 
 				&._shown {
 					display: block;
